again_changing_information in first row

--- a/insurance_Claim_Fraud_Detection_Project_Final.ipynb
+++ b/insurance_Claim_Fraud_Detection_Project_Final.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# display_all_file\n",
+    "# display_maximum rows of any data frame\n",
     "pd.set_option('display.max_rows',None)\n",
     "pd.set_option('display.max_columns',None)"
    ]
